# bloodstrike-esp-external

./: BUILD.md  CMakeLists.txt  README.md  platformio.ini
include/: bloodstrike_external.h
src/: bloodstrike_external.cpp  main.cpp
